--- a/期末.md
+++ b/期末.md
@@ -59,7 +59,7 @@ JavaScript部分參考chatgpt，html部分由個人所設計
 
 ---
 ### 作業10 用groq大語言模型LLM做一個簡單的網頁應用
-一開始有把它做出來，但Key API壞掉了不給跑一直顯示ERROR。那天去問老師了，老師也試過了是Key API出了問題。也有用其他APi過但我沒錢。所以就沒做了。
+由Chatgpt協助完成，但只能翻譯你好，所以出了錯但沒辦法修好，所以沒完成
 * [網頁](https://daibao87.github.io/hw10/index.html)
 * [原始碼](https://github.com/daibao87/daibao87.github.io/tree/main/hw10)
 
@@ -70,5 +70,5 @@ JavaScript部分參考chatgpt，html部分由個人所設計
 原始碼:https://github.com/daibao87/daibao87.github.io/tree/main/%E6%9C%9F%E4%B8%AD
 部分參考Chatgpt 基礎部分參考:https://koding.school/projects/5j3sgem/edit
 剩下遊戲介面由個人所創作
-### 期中作業 閱讀 denoApiService + Blog 的程式碼，並寫下理解然後為程式碼加上詳細的註解
+### 作業11 閱讀 denoApiService + Blog 的程式碼，並寫下理解然後為程式碼加上詳細的註解
 由於有點複雜，所以沒有完成
