--- a/期末.md
+++ b/期末.md
@@ -64,11 +64,17 @@ JavaScript部分參考chatgpt，html部分由個人所設計
 * [原始碼](https://github.com/daibao87/daibao87.github.io/tree/main/hw10)
 
 ---
-### 期中作業 ：請寫一個網頁作品 （最好至少有一個網頁有 JavaScript 程式）(2024/6/22 日週六 24:00 前繳交完畢）
+### 期中作業 ：請寫一個網頁作品 （最好至少有一個網頁有 JavaScript 程式）
+
 貪食蛇小遊戲
+
 網頁:https://daibao87.github.io/%E6%9C%9F%E4%B8%AD/index.html
+
 原始碼:https://github.com/daibao87/daibao87.github.io/tree/main/%E6%9C%9F%E4%B8%AD
+
 部分參考Chatgpt 基礎部分參考:https://koding.school/projects/5j3sgem/edit
+
 剩下遊戲介面由個人所創作
+
 ### 作業11 閱讀 denoApiService + Blog 的程式碼，並寫下理解然後為程式碼加上詳細的註解
 由於有點複雜，所以沒有完成
