--- a/期末.md
+++ b/期末.md
@@ -50,8 +50,8 @@ JavaScript部分參考chatgpt，html部分由個人所設計
 ---
 ### 作業8 Layout 佈局
 參考老師範例做出
-*  [原始碼](https://daibao87.github.io/hw8/layout.html)
-*  [網頁](https://github.com/daibao87/daibao87.github.io/blob/main/hw8/layout.html)
+*  [網頁](https://daibao87.github.io/hw8/layout.html)
+*  [原始碼](https://github.com/daibao87/daibao87.github.io/blob/main/hw8/layout.html)
 ---
 
 ### 作業9 有繪圖的網頁
